# test_clang_tidy

./: CMakeLists.txt
cmake/: conan.cmake
source/: CMakeLists.txt
source/include/: other_header.h  some_header.h
source/tests/: my_test.cpp
